--- a/index.html
+++ b/index.html
@@ -102,6 +102,18 @@
                         <p class="text-white mt-4">Hockey is a field game played between two teams consisting of eleven players each. The game is played with sticks and a ball.</p>
                     </div>
         </section>
+
+                <!-- Professional Hockeys Club Section-->
+            <section class="container text-center mx-auto lg:px-28 px-8">
+
+                <div class="py-10">
+                    <h4 class="font-extrabold text-[#131318] text-2xl mb-5">Professional Hockeys Club</h4>
+                    <p class="text-base text-[#0D0D12] font-medium lg:max-w-3xl mx-auto mb-10">Ice hockey is a game between two teams who wear skates and compete on an ice rink. Each team usually has six players. The object is to propel the puck past a goal line and into a net guarded by a goaltender. Ice hockey is popular for its speed and frequent physical contact. </p>
+                </div>
+                <div>
+                        
+                </div>
+            </section>
     </main>
     <footer>
 
