Profrssional Hockey progress Section done with responsive

--- a/index.html
+++ b/index.html
@@ -97,22 +97,48 @@
                   </div>
                 </div>
               </div>
-                    <div class=" lg:w-2/5 lg:relative bg-black shadow-lg rounded-lg  lg:translate-x-72 lg:left-96 -top-56 text-center p-8">
+                    <div class=" lg:w-2/5 lg:relative bg-black shadow-lg rounded-lg  lg:translate-x-72 lg:left-96 -top-56 text-center p-8 mb-6">
                         <h6 class="text-2xl font-bold text-white scroll-pt-36 ">Meet all the heroes from the field</h6>
-                        <p class="text-white mt-4">Hockey is a field game played between two teams consisting of eleven players each. The game is played with sticks and a ball.</p>
+                        <p class="text-[#FFFFFF99] mt-4">Hockey is a field game played between two teams consisting of eleven players each. The game is played with sticks and a ball.</p>
                     </div>
         </section>
 
                 <!-- Professional Hockeys Club Section-->
-            <section class="container text-center mx-auto lg:px-28 px-8">
+            <section>
+                <section class=" container mx-auto text-center lg:px-28 px-8">
+                    <h4 class="font-manrope font-extrabold text-[#131318] text-4xl mb-5">Professional Hockeys Club</h4>
+                    <p class="text-base font-manrope text-[#0D0D12] font-medium lg:max-w-3xl mx-auto mb-10">Hockey is a game between two teams who wear skates and compete on an ice rink. Each team usually has six players. The object is to propel the puck past a goal line and into a net guarded by a goaltender. Ice hockey is popular for its speed and frequent physical contact. </p>
+                
+                    <!-- Professional Hockeys Club -->
+                    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
+                        <!--  first Progress -->
+                        <div class="card p-6 items-center">
+                            <div class="radial-progress text-[#FF4240]" style="--value:87;" role="progressbar">87%</div>
+                            <h6 class="font-semibold text-xl font-manrope my-4 text-[#131318]">Prayer Facility</h6>
+                            <p class="text-[#0D0D1299] font-manrope text-base font-monorope">Hockey keeps the players both mentally and physically fit. It helps to build concentration and stamina. </p>
+                        </div>
+                        <!-- Second Progress -->
+                        <div class="card p-6 items-center">
+                            <div class="radial-progress text-[#49D293FF]" style="--value:95;" role="progressbar">95%</div>
+                            <h6 class="font-semibold text-xl font-manrope my-4 text-[#131318] ">Senior Player</h6>
+                            <p class="text-[#0D0D1299] font-manrope text-base font-monrope"> Even though organized hockey has been around since the early twentieth-century there has been much investigation into athletic development </p>
+                        </div>
+                        <!-- Thired Progress -->
+                        <div class="card p-6 items-center">
+                            <div class="radial-progress text-[#FFB546FF]" style="--value:90;" role="progressbar">90%</div>
+                            <h6 class="font-semibold text-xl font-manrope my-4 text-[#131318] ">Training Ground</h6>
+                            <p class="text-[#0D0D1299] font-manrope text-base font-monorope"> Hockey is believed to have been in existence about 1200 years before the Ancient Games of Olympia.</p>
+                        </div>
+                        <!-- Fourth Progress -->
+                        <div class="card p-6 items-center">
+                            <div class="radial-progress text-[#4C8DF1FF]" style="--value:80;" role="progressbar">80%</div>
+                            <h6 class="font-semibold text-xl font-manrope my-4 text-[#131318]">Prayer Facility</h6>
+                            <p class="text-[#0D0D1299] font-manrope text-base font-monorope">Hockey keeps the players both mentally and physically fit. It helps to build concentration and stamina. </p>
+                        </div>
 
-                <div class="py-10">
-                    <h4 class="font-extrabold text-[#131318] text-2xl mb-5">Professional Hockeys Club</h4>
-                    <p class="text-base text-[#0D0D12] font-medium lg:max-w-3xl mx-auto mb-10">Ice hockey is a game between two teams who wear skates and compete on an ice rink. Each team usually has six players. The object is to propel the puck past a goal line and into a net guarded by a goaltender. Ice hockey is popular for its speed and frequent physical contact. </p>
-                </div>
-                <div>
-                        
-                </div>
+                          </div>
+                    </div>
+                </section>
             </section>
     </main>
     <footer>
