programme Section completed with responsive

--- a/index.html
+++ b/index.html
@@ -103,8 +103,9 @@
                     </div>
         </section>
 
+
                 <!-- Professional Hockeys Club Section-->
-                <section class=" container mx-auto text-center lg:px-28 px-8">
+            <section class=" container mx-auto text-center lg:px-28 px-8">
                     <h4 class="font-manrope font-extrabold text-[#131318] text-4xl mb-5">Professional Hockeys Club</h4>
                     <p class="text-base font-manrope text-[#0D0D12] font-medium lg:max-w-3xl mx-auto mb-10">Hockey is a game between two teams who wear skates and compete on an ice rink. Each team usually has six players. The object is to propel the puck past a goal line and into a net guarded by a goaltender. Ice hockey is popular for its speed and frequent physical contact. </p>
                 
@@ -135,7 +136,55 @@
                             <p class="text-[#0D0D1299] font-manrope text-base font-monorope">Hockey keeps the players both mentally and physically fit. It helps to build concentration and stamina. </p>
                         </div>
                      </div>
-                </section>
+            </section>
+
+            <!-- Programme Section -->
+            <section class=" container mx-auto lg:px-28 px-8 mt-10">
+                    <h4 class="font-manrope font-extrabold text-[#131318] text-3xl lg:text-4xl lg:text-center mb-6">Programme Sections</h4>
+                    <p class="text-base font-manrope text-[#0D0D12] font-medium lg:max-w-3xl mx-auto mb-10">The Hockey Association was founded in 1886. The first international tournament took place in 1895, and the International Rules Board was founded in 1900.</p>
+                    
+                    <div class="grid gap-4 grid-cols-1 lg:grid-cols-12 grid-rows-2 mx-5 my-5 justify-center items-center">
+                            <!-- First Card Progamme -->
+                            <div class="mb-4 w-full relative lg:col-span-6 col-auto mr-4 flex-auto">
+                                        <img class="h-64 lg:w-full lg:h-full rounded-2xl object-cover" src="./Images/2.png" alt="Shoes"/>
+                                <div class="absolute top-1/2 left-1/2 h-full w-full transform translate-x-[-50%] translate-y-[-50%] text-white bg-black/30 flex lg:py-24 lg:px-10">
+                                    <div class="lg:px-6 py-4 pl-4">
+                                        <h2 class="font-extrabold text-lg lg:text-2xl font-manrope mb-4">Junior Program</h2>
+                                        <p class="text-xs lg:text-base font-medium font-manrope">The British brought the hockey game to India. The first hockey club was formed in Kolkata in 1885.</p>
+                                        <div class="card-actions flex items-center mt-3">
+                                            <button class="btn pl-4 bg-[#FF4240] border-none outline-none">Register Now</button>
+                                        </div>
+                                    </div>
+                                </div>
+                          </div>
+                          <!-- Second Card Programme -->
+                            <div class="relative lg:col-span-6 col-auto flex-auto ">
+                                    <img class="h-64 lg:w-full lg:h-full rounded-2xl object-cover" src="./Images/3.png" alt="Shoes"/>
+                                <div class="absolute top-1/2 left-1/2 h-full w-full transform translate-x-[-50%] translate-y-[-50%] text-white bg-black/30 flex lg:py-24 lg:px-10">
+                                    <div class="lg:px-6 py-4 pl-4">
+                                         <h2 class="font-extrabold text-lg lg:text-2xl font-manrope mb-4">Teenager Program</h2>
+                                            <p class="text-xs lg:text-base font-medium font-manrope">Hockey develops life skills that build a foundation for a child's confidence, pride, focus and responsibility.</p>
+                                        <div class="card-actions flex items-center mt-3">
+                                            <button class="btn pl-4 bg-[#FF4240] border-none outline-none">Register Now</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                          <!-- Thired Proramme card -->
+                            <div class="mt-6 rounded-lg relative  lg:col-span-12 col-auto ">
+                            <img class="h-64 lg:w-full lg:h-full rounded-2xl object-cover" src="./Images/4.png" alt="Shoes" />
+                                <div class="absolute top-1/2 left-1/2 h-full w-full transform translate-x-[-50%] translate-y-[-50%] text-white bg-black/30 flex justify-center mx-auto lg:py-24 lg:px-10">
+                                    <div class="lg:px-6 py-4">
+                                        <h2 class="font-extrabold text-lg lg:text-2xl font-manrope lg:mb-4 lg:text-start pl-4">Professional Program</h2>
+                                        <p class="text-xs lg:w-2/3 lg:text-base  lg:text-start p-4 font-medium font-manrope">Hockey's unique structure ensures that your child learns to love the game while promoting a healthy lifestyle, social wellness and mental well-being.</p>
+                                        <div class="card-actions pl-4">
+                                            <button class="btn bg-[#FF4240] border-none outline-none">Register Now</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                     </div>
+            </section>
     </main>
     <footer>
 
