our new produts collection store and price completed with responsive

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             </section>
 
             <!-- Programme Section -->
-            <section class=" container mx-auto lg:px-28 px-8 mt-10">
+            <section class="container mx-auto lg:px-28 px-8 mt-10">
                     <h4 class="font-manrope font-extrabold text-[#131318] text-3xl lg:text-4xl lg:text-center mb-6">Programme Sections</h4>
                     <p class="text-base font-manrope text-[#0D0D12] font-medium lg:max-w-3xl mx-auto mb-10">The Hockey Association was founded in 1886. The first international tournament took place in 1895, and the International Rules Board was founded in 1900.</p>
                     
@@ -184,6 +184,129 @@
                                 </div>
                             </div>
                      </div>
+            </section>
+
+            <!-- Our New Product Section -->
+            <section class="container mx-auto lg:px-28 px-8 mt-10">
+                <h4 class="font-manrope font-extrabold text-[#131318] text-3xl lg:text-4xl lg:text-center mb-6">Our New Products</h4>
+                    <p class="text-base font-manrope text-[#0D0D12] font-medium lg:max-w-3xl mx-auto mb-10">When you shop with us, you’re buying 100% authentic pro stock hockey gear originally crafted for various pro leagues and professional hockey teams — including the NHL!</p>
+
+                    <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 rounded-lg bg-[#FFF] mb-12">
+                        <!-- First Card -->
+                      <div class="hero-content w-full flex-col justify-between lg:flex-row shadow-xl">
+                                <img src="./Images/5.png" class="max-w-sm rounded-lg shadow-2xl" />
+                            <div class="space-y-5 space-x-10 justify-center">
+                                <div class="flex items-center rating gap-5 justify-center">
+                                    <p><input type="radio" name="rating-2"class="mask  mask-star-2 bg-orange-400"/>  5.0</p>
+                                    <p><i class="fa-solid fa-eye"></i>  20</p>
+                                    <p><i class="fa-regular fa-heart"></i>  200</p>
+                                </div>
+                                <div>
+                                    <h4 class="text-xl font-extrabold font-manrope">Jacket For Hockey</h4>
+                                    <p class="text-[#0D0D1280] mt-4">BAUER HOCKEY MIDWEIGHT WARM-UP JACKET - ADULT</p>
+                                </div>
+                                <div class="flex gap-5">
+                                    <p class="text-[#FF4240] font-bold text-lg font-manrope">Price - $22.00</p>
+                                    <p class="text-[#0D0D1280]"><i class="fa-solid fa-cart-shopping space-y-4"></i>    Delivery Fee : Free</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Second card -->
+                      <div class="hero-content flex-col justify-between lg:flex-row shadow-xl">
+                                <img src="./Images/6.png" class="max-w-sm rounded-lg shadow-2xl" />
+                            <div class="space-y-5 space-x-10 justify-center">
+                                <div class="flex items-center rating gap-5 justify-center">
+                                    <p><input type="radio" name="rating-2"class="mask  mask-star-2 bg-orange-400"/>  5.0</p>
+                                    <p><i class="fa-solid fa-eye"></i>  20</p>
+                                    <p><i class="fa-regular fa-heart"></i>  200</p>
+                                </div>
+                                <div>
+                                    <h4 class="text-xl font-extrabold font-manrope">World Cup Football</h4>
+                                    <p class="text-[#0D0D1280] mt-4">BAUER CORE SNAPBACK ADJUSTABLE CAP - YOUTH</p>
+                                </div>
+                                <div class="flex gap-5">
+                                    <p class="text-[#FF4240] font-bold text-lg font-manrope">Price - $29.99</p>
+                                    <p class="text-[#0D0D1280]"><i class="fa-solid fa-cart-shopping space-y-4"></i>    Delivery Fee : Free</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Third Card  -->
+                      <div class="hero-content flex-col justify-between lg:flex-row shadow-xl">
+                                <img src="./Images/7.png" class="max-w-sm rounded-lg shadow-2xl" />
+                            <div class="space-y-5 space-x-10 justify-center">
+                                <div class="flex items-center rating gap-5 justify-center">
+                                    <p><input type="radio" name="rating-2"class="mask  mask-star-2 bg-orange-400"/>  5.0</p>
+                                    <p><i class="fa-solid fa-eye"></i>  20</p>
+                                    <p><i class="fa-regular fa-heart"></i>  200</p>
+                                </div>
+                                <div>
+                                    <h4 class="text-xl font-extrabold font-manrope">World Cup Football </h4>
+                                    <p class="text-[#0D0D1280] mt-4">GAMEWEAR GW6500 PROLITE TWO-TONE HOCKEY PRACTICE JERSEY - SENIOR</p>
+                                </div>
+                                <div class="flex gap-5">
+                                    <p class="text-[#FF4240] font-bold text-lg font-manrope">Price - $21.99</p>
+                                    <p class="text-[#0D0D1280]"><i class="fa-solid fa-cart-shopping space-y-4"></i>    Delivery Fee : Free</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Fourth Card -->
+                      <div class="hero-content flex-col justify-between lg:flex-row shadow-xl">
+                                <img src="./Images/8.png" class="max-w-sm rounded-lg shadow-2xl" />
+                            <div class="space-y-5 space-x-10 justify-center">
+                                <div class="flex items-center rating gap-5 justify-center">
+                                    <p><input type="radio" name="rating-2"class="mask  mask-star-2 bg-orange-400"/>  5.0</p>
+                                    <p><i class="fa-solid fa-eye"></i>  20</p>
+                                    <p><i class="fa-regular fa-heart"></i>  200</p>
+                                </div>
+                                <div>
+                                    <h4 class="text-xl font-extrabold font-manrope">Helmet For Hockey</h4>
+                                    <p class="text-[#0D0D1280] mt-4">BAUER RE-AKT 65 HOCKEY HELMET COMBO</p>
+                                </div>
+                                <div class="flex gap-5">
+                                    <p class="text-[#FF4240] font-bold text-lg font-manrope">Price - $129.99</p>
+                                    <p class="text-[#0D0D1280]"><i class="fa-solid fa-cart-shopping space-y-4"></i>    Delivery Fee : Free</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Fifth Card -->
+                      <div class="hero-content flex-col justify-between lg:flex-row shadow-xl">
+                                <img src="./Images/9.png" class="max-w-sm rounded-lg shadow-2xl" />
+                            <div class="space-y-5 space-x-10 justify-center">
+                                <div class="flex items-center rating gap-5 justify-center">
+                                    <p><input type="radio" name="rating-2"class="mask  mask-star-2 bg-orange-400"/>  5.0</p>
+                                    <p><i class="fa-solid fa-eye"></i>  20</p>
+                                    <p><i class="fa-regular fa-heart"></i>  200</p>
+                                </div>
+                                <div>
+                                    <h4 class="text-xl font-extrabold font-manrope">World Cup Cricket Jersey</h4>
+                                    <p class="text-[#0D0D1280] mt-4">BAUER HOCKEY MIDWEIGHT WARM-UP JACKET - ADULT</p>
+                                </div>
+                                <div class="flex gap-5">
+                                    <p class="text-[#FF4240] font-bold text-lg font-manrope">Price - $29.00</p>
+                                    <p class="text-[#0D0D1280]"><i class="fa-solid fa-cart-shopping space-y-4"></i>    Delivery Fee : Free</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Sixth Card -->
+                      <div class="hero-content flex-col justify-between lg:flex-row shadow-xl">
+                                <img src="./Images/10.png" class="max-w-sm rounded-lg shadow-2xl" />
+                            <div class="space-y-5 space-x-10 justify-center">
+                                <div class="flex items-center rating gap-5 justify-center">
+                                    <p><input type="radio" name="rating-2"class="mask  mask-star-2 bg-orange-400"/>  5.0</p>
+                                    <p><i class="fa-solid fa-eye"></i>  20</p>
+                                    <p><i class="fa-regular fa-heart"></i>  200</p>
+                                </div>
+                                <div>
+                                    <h4 class="text-xl font-extrabold font-manrope">World Cup Flags Football</h4>
+                                    <p class="text-[#0D0D1280] mt-4">BAUER HOCKEY MIDWEIGHT WARM-UP JACKET - ADULT</p>
+                                </div>
+                                <div class="flex gap-5">
+                                    <p class="text-[#FF4240] font-bold text-lg font-manrope">Price - $27.90</p>
+                                    <p class="text-[#0D0D1280]"><i class="fa-solid fa-cart-shopping space-y-4"></i>    Delivery Fee : Free</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
             </section>
     </main>
     <footer>
