FAQ section completed with responsive

--- a/index.html
+++ b/index.html
@@ -308,6 +308,109 @@
                         </div>
                     </div>
             </section>
+
+            <!-- Client FAQ Question Section -->
+            <section class="container mx-auto lg:px-28 px-8 mt-10">
+                <h4 class="font-manrope font-extrabold text-[#131318] text-3xl lg:text-4xl text-center lg:text-center mb-6">Clients Question</h4>
+                    <p class="text-base font-manrope text-[#0D0D12] font-medium lg:max-w-3xl mx-auto mb-10 text-center">Answers to our most frequently asked questions are just one click away.</p>
+
+                    <div class="hero min-h-screen">
+                        <div class="hero-content flex-col lg:gap-24 lg:flex-row">
+                          <img src="./Images/11.png" class="w-3/4 lg:max-w-sm rounded-lg shadow-2xl" />
+                          <!-- Accordion Question -->
+                        <div>
+                            <!-- One Q&A -->
+                            <div class="collapse collapse-plus ">
+                                <input type="radio" name="my-accordion-3" checked="checked" /> 
+                                <div class="collapse-title text-xl font-medium">
+                                  Why do you need hockey equipment?
+                                </div>
+                                <div class="collapse-content"> 
+                                  <p>When it cimes to preventing serious injuries,this is most important piece of equipment.</p>
+                                </div>
+                              </div>
+                              <!-- Two Q&A -->
+                              <div class="collapse collapse-plus ">
+                                <input type="radio" name="my-accordion-3" /> 
+                                <div class="collapse-title text-xl font-medium">
+                                  What is needed to play hockey?
+                                </div>
+                                <div class="collapse-content"> 
+                                  <p>Helmet, Mouth Guard, Neck guard, Shoulder pads, Elbow pads, Hockey gloves &.....</p>
+                                </div>
+                              </div>
+                              <!-- Three Q&A -->
+                                <div class="collapse collapse-plus ">
+                                    <input type="radio" name="my-accordion-3" /> 
+                                    <div class="collapse-title text-xl font-medium">
+                                        What are your payment options?
+                                    </div>
+                                    <div class="collapse-content"> 
+                                        <p>We accept cash, Visa, MasterCard, Discover and American Express.</p>
+                                    </div>
+                                </div>
+                                <!-- Fourth FAQ -->
+                                <div class="collapse collapse-plus ">
+                                    <input type="radio" name="my-accordion-3" /> 
+                                    <div class="collapse-title text-xl font-medium">
+                                        Which couriers do you use?
+                                    </div>
+                                    <div class="collapse-content"> 
+                                        <p>We use Business post, Fedex, DHL, DX, MyHermes, DPD.</p>
+                                    </div>
+                                </div>
+                                <!-- Fifth Q&A -->
+                                <div class="collapse collapse-plus ">
+                                    <input type="radio" name="my-accordion-3" /> 
+                                    <div class="collapse-title text-xl font-medium">
+                                       Can you deliver to a work address?
+                                    </div>
+                                    <div class="collapse-content"> 
+                                        <p>As a precaution Hockeydirect Customer Services will complete a security check to ensure the existence of the company at the address listed</p>
+                                    </div>
+                                </div>
+                                <!-- Sixth Q&A-->
+                                <div class="collapse collapse-plus ">
+                                    <input type="radio" name="my-accordion-3" /> 
+                                    <div class="collapse-title text-xl font-medium">
+                                        Is there a Hockeydirect brochure
+                                    </div>
+                                    <div class="collapse-content"> 
+                                        <p>Yes, we have a newsletter and a catalogue, which you can subscribe to from our website homepage</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+            </section>
+
+            <!-- Get In Touch section -->
+            <section class="container mx-auto lg:px-28 px-8 mt-10">
+                <h4 class="font-manrope font-extrabold text-[#131318] text-3xl lg:text-4xl text-center lg:text-center mb-6">Get In Touch</h4>
+                <p class="text-base font-manrope text-[#0D0D12] font-medium lg:max-w-3xl mx-auto mb-10 text-center">We only stock prestigious hockey brands like Grays, TK, Kookaburra, Adidas, Mercian and Gryphon – so whether you’re looking on behalf of yourself, a school, hockey club, league or association, you have come to the right place!.</p>
+
+                <!-- Contact Address & Contact Form -->
+                <div>
+                    <!-- Contact Address -->
+                    <div class="space-y-5">
+                        <div>
+                            <p><i class="fa-solid fa-phone-volume"></i></p>
+                            <p>Phone Number : </p>
+                            <p>(+62) 123-321-543</p>
+                        </div>
+                        <div>
+                            <p><i class="fa-solid fa-envelopes-bulk"></i></p>
+                            <p>Email : </p>
+                                <p>hockeys@support.com</p>
+                        </div>
+                        <div>
+                            <p><i class="fa-solid fa-map-location"></i></p>
+                            <p>Location : </p>
+                            <p>152/1 Mohakhali Wireless Gate</p>
+                        </div>
+                    </div>  
+                        <div></div>
+                </div>
+            </section>
     </main>
     <footer>
 
