completed full page setup  assignment three with responsive

--- a/index.html
+++ b/index.html
@@ -420,70 +420,69 @@
         </section>
 
         <!-- Get In Touch section Problem-->
-        <section class="container mx-auto lg:px-28 px-8 mt-20">
-            <h4 class="font-manrope font-extrabold text-[#131318] text-3xl lg:text-4xl text-center lg:text-center mb-6">
+        <section class="container mx-auto lg:mt-20">
+            <h4 class="font-manrope font-extrabold text-[#131318] text-3xl lg:text-4xl text-center lg:text-center lg:mb-6">
                 Get In Touch</h4>
-            <p class="text-base font-manrope text-[#0D0D12] font-medium lg:max-w-3xl mx-auto mb-10 text-center">We only
+            <p class="text-base font-manrope text-[#0D0D12] font-medium lg:max-w-3xl mx-auto lg:mb-10 text-center mt-10 w-3/4">We only
                 stock prestigious hockey brands like Grays, TK, Kookaburra, Adidas, Mercian and Gryphon, so whether
                 you’re looking on behalf of yourself, a school, hockey club, league or association, you have come to the
                 right place!.</p>
 
             <!-- Contact Address & Contact Form -->
-            <div class="hero-content flex justify-center col-span-1 lg:col-span-2">
-                <!-- Contact Address -->
-                <div class="space-y-5">
-                    <div class="rounded-lg bg-[#BCED6D19] shadow-lg p-10 space-y-4">
-                        <img src="./Images/Group 1171275317.png" alt="">
-                        <p class="text-[#13131866] text-base font-normal">Phone Number : </p>
-                        <p class="text-[#131318] font-bold text-sm">(+62) 123-321-543</p>
-                    </div>
-                    <div class="rounded-lg bg-[#FDDD5F19] shadow-lg p-10 space-y-4">
-                        <img src="./Images/Group 1171275318.png" alt="">
-                        <p class="text-[#13131866] text-base font-normal">Email : </p>
-                        <p class="text-[#131318] font-bold text-sm">hockeys@support.com</p>
-                    </div>
-                    <div class="rounded-lg bg-[#629CF319] shadow-lg p-10 space-y-4">
-                        <img src="./Images/Group 1171275321.png" alt="">
-                        <p class="text-[#13131866] text-base font-normal">Location : </p>
-                        <p class="text-[#131318] font-bold text-sm">152/1 Mohakhali Wireless Gate</p>
-                    </div>
-                </div>
-
-                <!-- Input Area -->
-                <div class="rounded-xl shadow-xl bg-[#13131866] mt-10 p-10">
-                    <!-- Name & Email Input Area -->
-                    <div class="flex rounded-lg shadow-lg gap-5">
-                        <!--Please Input Your Name  -->
-                        <div>
-                            <h6>Please Input Your Name</h6>
-                            <input type="text" placeholder="Enter Your Full Name" class="input input-bordered input-md w-full max-w-xs" />
+            <div class="grid lg:grid-cols-2 grid-cols-1 mt-10">
+                    <!-- Contact Address -->
+                    <div class="lg:space-y-5 grid justify-center space-y-5">
+                        <div class="rounded-lg bg-[#BCED6D19] shadow-xl p-10 space-y-4">
+                            <img src="./Images/Group 1171275317.png" alt="">
+                            <p class="text-[#13131866] text-base font-normal">Phone Number : </p>
+                            <p class="text-[#131318] font-bold text-sm">(+62) 123-321-543</p>
                         </div>
-                        <!--Input Your Email  -->
-                        <div>
-                            <h6>Input Your Email</h6>
-                            <input type="text" placeholder="Enter Your Name" class="input input-bordered input-md w-full max-w-xs" />
+                        <div class="rounded-lg bg-[#FDDD5F19] shadow-lg p-10 space-y-4">
+                            <img src="./Images/Group 1171275318.png" alt="">
+                            <p class="text-[#13131866] text-base font-normal">Email : </p>
+                            <p class="text-[#131318] font-bold text-sm">hockeys@support.com</p>
                         </div>
+                        <div class="rounded-lg bg-[#629CF319] shadow-lg p-10 space-y-4">
+                            <img src="./Images/Group 1171275321.png" alt="">
+                            <p class="text-[#13131866] text-base font-normal">Location : </p>
+                            <p class="text-[#131318] font-bold text-sm">152/1 Mohakhali Wireless Gate</p>
+                        </div>  
                     </div>
-
-                    <!-- Subject & Phone Number area -->
-                    <div class="flex rounded-lg shadow-lg gap-5">
-                        <div>
-                            <h6>Subject</h6>
-                            <input type="text" placeholder="Enter Your Subject" class="input input-bordered input-md w-full max-w-xs" />
+                    <!-- Input Area -->
+                    <div class="lg:w-full grid justify-center lg:rounded-xl shadow-xl lg:pt-6 mt-10">
+                        <!-- Name & Email Input Area -->
+                        <div class="flex items-center lg:rounded-lg gap-5 lg:space-y-5">
+                            <!--Please Input Your Name  -->
+                            <div>
+                                <h6 class="">Please Input Your Name</h6>
+                                <input type="text" placeholder="Enter Your Full Name" class="input input-bordered input-md lg:w-full max-w-xs"/>
+                            </div>
+                            <!--Input Your Email  -->
+                            <div >
+                                <h6>Input Your Email</h6>
+                                <input type="text" placeholder="Enter Your Name" class="input input-bordered input-md lg:w-full" />
+                            </div>
                         </div>
-                        <div>
-                            <h6>Phone Number</h6>
-                            <input type="text" placeholder="Enter Your Name" class="input input-bordered input-md w-full max-w-xs" />
+                        <!-- Subject & Phone Number area -->
+                        <div class="flex items-center lg:rounded-lg gap-5 lg:space-y-5">
+                            <div>
+                                <h6>Subject</h6>
+                                <input type="text" placeholder="Enter Your Subject" class="input input-bordered input-md outline-none lg:w-full" />
+                            </div>
+                            <div>
+                                <h6>Phone Number</h6>
+                                <input type="text" placeholder="Enter Your Name" class="input input-bordered input-md lg:w-full outline-none" />
+                            </div>
                         </div>
-                    </div>
-                        <!-- Message Input -->
-                    <div class="flex rounded-lg shadow-lg gap-5">
-                        <h6>Message</h6>
-                        <textarea class="textarea textarea-error" placeholder="Write your message"></textarea>
-                    </div>
-                    <button class="btn btn-outline btn-secondary">Send Message</button>
-                </div>   
-                    
+                            <!-- Message Input -->
+                        <div class="lg:rounded-lg gap-3 lg:p-10">
+                            <h6 class="m-4">Message</h6>
+                            <textarea class="textarea textarea-error " placeholder="Write your message" cols="60" rows="10"></textarea>
+                        </div>
+                        <div class="flex justify-center pb-10">
+                            <button class="btn bg-red-600 lg:w-2/3">Send Message</button>
+                        </div>
+                    </div>       
             </div>
         </section>
 
@@ -502,7 +501,7 @@
                 </div>
         </section>
     </main>
-        <footer class=" grid justify-around footer p-10 bg-[#131318] text-base-content">
+        <footer class="mt-10 grid lg:justify-around footer justify-center mx-auto p-10 bg-[#131318] text-base-content">
             <aside>
                 <h4 class="text-2xl font-bold text-white">Get In Touch</h4>
               <p class="text-[#FFFFFF99] font-medium text-base">Hockey's unique structure ensures that your child <br>
